# Mind-Palace

./: .gitignore  .gitlab-ci.yml  .gitleaks.toml  .releaserc.json  CHANGELOG.md  CLAUDE.md  CONSTITUTION.md  CONVENTIONS.md  README.md  package.json  pnpm-lock.yaml  pyproject.toml
.claude/: settings.json  settings.local.json
.claude/agents/: builder.md  scribe.md
.claude/commands/: build.md  capture.md  graduate.md  resume.md  scribe.md  triage.md
.claude/hooks/: _lib.py  compaction-marker.sh  gate-guard.sh  journal-gate.sh  scope-guard.sh  session-brief.sh  staleness-nudge.sh
.claude/state/: .gitignore
.githooks/: post-commit
.github/workflows/: ci.yml  release.yml
agents/: __init__.py
agents/ambassador/: __init__.py  agent.py
cloud/: README.md
config/: __init__.py  defaults.toml  loader.py  secrets_backend.py
core/: __init__.py  agent.py  agent_scope.py  chat_events.py  constitution.py  dreams_view.py  effect_proposal.py  integrator.py  interface.py  mirror.py  ops_view.py  provenance.py  recursion_ops.py  reference_view.py  runtime.py  scope.py  sealing.py  selfcheck.py  sensing.py  temporal_view.py  vitals.py
core/attestation/: attestor.py  store.py  verify.py
core/complex/: __init__.py  balance.py  blocks.py  build.py  curvature.py  cut.py  laplacian.py  spectral.py  support.py  temporal.py  topology.py
core/config/: __init__.py  loader.py
core/curator/: __init__.py  curator.py
core/dreaming/: __init__.py  adjudicator.py  charter.py  conditioning.py  dreamer.py  evaluate.py  graph.py  interpreters.py  rnd.py  shadow.py
core/factory/: __init__.py  factory.py  registry.py  roles.py  tools.py
core/graph/: __init__.py  composed.py  conductance.py  influence.py  sigma_star.py
core/ingest/: __init__.py  amend.py  chunk.py  curated.py  dialogue.py  embed.py  founding.py  index.py  logseq.py  mint_ids.py  pipeline.py  purge.py  run.py  sync.py  watch.py
core/kernel/: __init__.py  agent_scope.py  complex_types.py  constitution.py  mirror.py  recursion.py  rings.py  velocity_view.py
core/librarian/: __init__.py  librarian.py
core/models/: __init__.py  loader.py  ollama_client.py  registry.py  server.py
core/research/: airlock.py  criteria.py  persist.py  rank.py
core/sandbox/: __init__.py  broker.py  policy.py  pool.py  runner.py  spec.py
core/stores/: __init__.py  agent_observations.py  authored_supersession.py  catalog.py  causal_edges.py  chat_events.py  chatlog.py  claim_ops.py  code_observations.py  curated_store.py  derived.py  edges.py  observation_history.py  rawstore.py  reference_edges.py  runledger.py  staging.py  telemetry.py  vectorstore.py  verdicts.py  versions.py
core/temporal/: __init__.py  atlas.py  boundary.py  complex.py  operators.py  spine.py  superconnection.py
core/typedshims/: __init__.py  lancedb.py  psutil.py  sknetwork.py
core/verdict/: __init__.py  apply.py  dispositions.py  payload.py  taxonomy.py
docs/: BUILD-SPEC.md  BUILDER-PROMPT-FORWARD.md  BUILDER-PROMPTS-INTEGRATION.md  DESKCHECK-QUEUE.md  HANDOFF.md  INTEGRATION-AND-WIRING.md  MATHEMATICAL-REFRAMING.md  MIND-PALACE-V1.md  NOTATION.md  PARKING-LOT.md  PROGRESS.md  README.md  REASONING-COMPLEX-BUILD.md  REASONING-COMPLEX-MATHEMATICS.md  ROADMAP-V1.md  TRACKS.md  WHITEPAPER-FORMAL-PROPERTIES.md  WHITEPAPER-TECHNICAL.md  WHITEPAPER.md  builder-prompt-edge-and-supersession.md  builder-prompt.md  hands-and-the-effector-layer.md  runbook.md  schema.md
docs/archive/: WHITEPAPER-DREAMER-MATHEMATICS.md
docs/audits/: mypy-baseline-2026-07-11.md  prompt-integrity-audit.md
docs/brainstorms/: agent-causal-loop.md  book-pedagogy.md  bp-000-acceptance.md  clock-curvature.md  conductivity-and-reasoning-chains-fable-pass.md  conductivity-and-reasoning-chains.md  core-query-protocol.md  cost-forecasting.md  cross-strata-and-multiscale-dreamers.md  doc-code-entanglement.md  durable-chat-blessings.md  edge-dynamics-and-continuum.md  edge-dynamics-vector-field.md  evaluation-harness.md  external-grounding.md  fiber-chain-grammar.md  graph-at-a-past-cut.md  inner-outer-core.md  magnetic-laplacian-fable-pass.md  reconciliation-audit.md  reference-integrator.md  self-sensing.md  temporal-clocks-and-strata.md  velocity-and-clocks-fable-pass.md
docs/design-notes/: agent-taxonomy.md  agent-workflow.md  alignment-subsystem.md  ambassador-as-reasoning-agent.md  ambassador-interpretation-and-flow.md  attestation-layer.md  capability-scope-algebra.md  ci-platform-and-runner-strategy.md  code-ingest-pipeline.md  code-observation-projection.md  connectivity-instruments.md  core-integrity.md  core-query-protocol.md  cross-strata-dreamer.md  dialogue-ingest-and-recursion.md  dn-headless-daemon-secret-bootstrap.md  dream-phase-rnd-charter.md  dreamer-quality-suite-evaluation.md  dreaming-on-curated-graphs.md  dreaming-v2-interpreter-panel.md  edge-dynamics.md  effector-risk-computation.md  evaluation-harness.md  exhaust-lane.md  founding-corpus.md  global-event-clock.md  hands-and-the-effector-layer.md  holistic-testing.md  ingest-identity-and-amendment.md  inner-outer-core.md  integrator-densification.md  live-adoption-and-longitudinal-harness.md  magnetic-laplacian.md  nervous-system-and-ambassador.md  observed-data-and-the-assistant-tier.md  observed-iot-and-cross-source-synthesis.md  ouroboros-principal.md  recursive-dreaming-bounded-by-grounding.md  recursive-strata-amendment.md  (+23 more)
edge/: __init__.py
eval/: __init__.py  drift.py
ops/: __init__.py  chat_sensor.py  ci_witness.py  code_sensor.py  code_snapshot.py  effects.py  gate.py  self_sensor.py  selfmod.py  selfmod_cli.py  staging_sweep.py
scheduler/: __init__.py  budget.py  chat_sync.py  interface.py  queue.py  router.py  vault_sync.py
scripts/: ci_witness.py  cockpit.sh  docket.py  eval.py  exhaust_report.py  ingest.py  keep-awake.sh  migrate_chunk_keys.py  orchestrator-launch.sh  palace.py  purge_raw.py  run_with_secrets.sh  sweep.py  talk.py  verdict.py  watch.py
tests/: test_agent.py  test_purge_raw.py  test_sandbox_broker.py  test_sandbox_pool.py  test_vault_sync.py  test_vectorstore.py
(+420 files in other folders)
