[project]
name = "mind-palace"
version = "0.0.0"
description = "Sealed, offline-first personal AI — a mind palace. Built phase by phase."
requires-python = ">=3.13"
# Runtime deps are intentionally minimal. The sealed core (Zone A) must not pull in
# any package that can reach the network (CONVENTIONS: "no import path that can reach
# the network"); HTTP to the local Ollama server uses the stdlib only.
dependencies = [
    "duckdb>=1.0",    # telemetry store (embedded, no daemon)
    "psutil>=5.9",    # system vitals (memory headroom, cpu, load)
    "lancedb>=0.10",  # thought-graph vectors (embedded, no daemon)
    "numpy>=1.26",    # deterministic embedding clustering for dreaming/curation (§9)
    "cryptography>=42",  # Ed25519 signing of attestations (runtime proof layer); not a net lib
    "scipy>=1.11",    # reasoning complex: sparse Laplacians + partial eigensolves (Zone A, compute-only)
    "scikit-network>=0.31",  # reasoning complex: Louvain cross-check / spectral embed (offline, no net)
    "ripser>=0.6",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",   # line+branch coverage over the deterministic tier (opt-in via --cov; not in addopts)
    "ruff>=0.5",
    "hypothesis>=6.0",   # property-based tests for the invariant catalog (I6/I9/I10/I13)
    "mypy>=1.13",
    "scipy-stubs>=1.14", # scipy ships no py.typed; maintained stubs keep core/complex in the checked region
]
# Zone B (edge) ONLY — never a core dependency. The research-airlock bridge talks to S3 with
# boto3; the import-firewall (ops/import_lint.py) forbids boto3 anywhere under core/. The
# bridge imports it lazily so tests (fake S3 client) don't need it installed.
edge = [
    "boto3>=1.34",
]
# Real-time vault watching (FSEvents/inotify). OPTIONAL: the watcher falls back to polling
# without it (core/ingest/watch.py), so it isn't a hard dependency. watchdog is a local
# filesystem library — no network — and is imported lazily.
watch = [
    "watchdog>=4.0",
]
# Vault as a runtime authorization layer (design-notes/vault-runtime-auth.md). OPTIONAL: the
# `[secrets]` config section defaults to disabled, and `get_secret(name)` with no token never
# touches hvac. The import-firewall (ops/import_lint.py) forbids hvac anywhere under core/ —
# config/secrets_backend.py imports it lazily so FakeVault-backed tests don't need it installed.
secrets = [
    "hvac>=2.0",
]

[tool.pytest.ini_options]
# Top-level zone packages (core/, edge/, …) are importable without an editable install.
pythonpath = ["."]
testpaths = ["tests"]
# Markers are split two ways (test-organization.md): a *category* marker per directory
# (applied by each tests/<cat>/conftest.py) describing the execution profile, plus
# *capability* markers (live/podman/slow/needs_*) describing what infra a test needs.
markers = [
    # category (execution profile) — one per tests/ subdirectory
    "unit: fast, isolated, no I/O",
    "integration: component-pair tests with real local stores, no network",
    "e2e: full-pipeline tests (slow, may need models/podman)",
    "property: Hypothesis property-based + exhaustive FSM invariant checks",
    "metamorphic: input/output relationship tests (no ground truth)",
    "adversarial: red-team invariant-violation attempts through the interfaces",
    "integrity: firewall/provenance/attestation/import-lint — the non-skippable CI gate",
    "emergent: multi-component, concurrent, cross-invariant tests",
    "quality: dreamer output-quality (signal-vs-noise/apophenia) — pure-CI, statistical bounds",
    "longitudinal: slow drift tests, scheduled only (excluded from default runs)",
    # capability (infra needed) — orthogonal to category
    "live: requires a running Ollama server and pulled models (deselect: -m 'not live')",
    "podman: requires a working rootless Podman (deselect: -m 'not podman')",
    "slow: takes >10s",
    "needs_models: requires Ollama models pulled",
    "needs_network: requires network (edge/cloud only — never core)",
    "needs_vault: requires a running Vault dev-server (deselect: -m 'not needs_vault')",
    "needs_restic: requires the restic binary installed (deselect: -m 'not needs_restic')",
]
# The longitudinal suite is opt-in: it runs against a continuously-running system, not in
# the standard inner loop. Exclude it from a bare `pytest`; opt in with `pytest tests/longitudinal`.
addopts = "-m 'not longitudinal'"
filterwarnings = [
    # LanceDB calls its own deprecated table_names() internally; not our code.
    "ignore:.*table_names.*:DeprecationWarning",
]

# Coverage is OPT-IN (not in addopts, to keep the inner loop fast): run it explicitly with
#   uv run pytest -m 'not live and not podman and not needs_vault and not needs_restic' \
#       --cov --cov-report=term-missing
# The measured number reflects what the DETERMINISTIC tier exercises — code reachable only
# through the live/podman/vault axes reads as uncovered here, by design (those axes run locally).
[tool.coverage.run]
branch = true
source = ["core", "agents", "cloud", "config", "edge", "eval", "ops", "scheduler"]
omit = ["*/typedshims/*", "*/__pycache__/*"]

[tool.coverage.report]
exclude_also = [
    "if TYPE_CHECKING:",
    "raise NotImplementedError",
    "@(abc\\.)?abstractmethod",
    "if __name__ == .__main__.:",
]

[tool.ruff]
line-length = 100
target-version = "py313"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]

[tool.ruff.lint.per-file-ignores]
# Embedded dashboard HTML/CSS/JS asset — long template lines, not code (server.py stays linted).
"edge/monitor/page.py" = ["E501"]

[tool.mypy]
# type-system-as-core-audit.md §2.5 — the two-tier checked region (ratified 2026-07-11).
# GLOBAL settings are the Tier-2 FLOOR, decided from measured evidence (bp-007 Item 5,
# 2026-07-11): `check_untyped_defs` (every module that imports core is analyzed, untyped
# defs still checked) + `disallow_any_generics` (bare generic containers — dict/list/etc
# missing type params — can't silently launder Any into core calls). Decision evidence:
# adding disallow_any_generics to the post-bp-006 baseline (296 errors) cost +68 errors,
# ALL `type-arg`, zero T1 in the delta, T2-only (real untyped shape: bare dict/list/
# CompletedProcess/Sequence/set/Counter) — the plan Item 5 falsifier ("adds only T3
# friction") did NOT trip, so the stricter floor earns its place; adopted, not the base
# floor alone. Tier-3 (edge/, cloud/ — zero core imports, measured V1a 2026-07-11) is
# unchecked by RECORDED DEFAULT, not deferred debt — see the follow_imports override below
# for why their errors don't surface when pulled in transitively by Tier-2 importers.
# Report-only until B-2 wires the gate.
files = ["core", "agents", "config", "eval", "ops", "scheduler", "scripts", "tests"]
explicit_package_bases = true       # scripts/ are entry points, not a package: scripts/eval.py
                                    # must resolve as scripts.eval, not collide with eval/
check_untyped_defs = true
disallow_any_generics = true
warn_redundant_casts = true
warn_unused_configs = true

# Tier 1 — core/: strict components (mypy forbids `strict` inside overrides; expanded here).
# disallow_any_generics is now also set globally (floor, above) — kept here too so this
# block stays a complete, self-contained statement of Tier-1 strictness if the floor ever
# changes independently.
[[tool.mypy.overrides]]
module = "core.*"
disallow_untyped_defs = true
disallow_incomplete_defs = true
disallow_untyped_calls = true
disallow_any_generics = true
disallow_untyped_decorators = true
warn_return_any = true

# V2 (2026-07-11): no py.typed upstream. `lancedb`/`sknetwork`/`psutil` are wrapped by the
# §2.5 boundary shims (core/typedshims/{lancedb,sknetwork,psutil}.py — bp-006 Item 2); each
# shim carries its own per-line warranted ignore, so no blanket override remains for them.
# `watchdog` + `hvac` keep the interim override: OPTIONAL extras, lazily imported (watchdog inside
# core/ingest/watch.py; hvac inside config/secrets_backend.py) and possibly absent from the
# environment entirely — no upstream py.typed either way.
[[tool.mypy.overrides]]
module = ["watchdog.*", "hvac.*"]
ignore_missing_imports = true

# bp-007 Item 5 (2026-07-11) measured `edge`/`config` as Tier-3 (V1a — zero core imports). bp-067
# (finding-0103) then moved the config LOADER into `core.config` and made `config/loader.py` a thin
# core-importing facade — so `config` now imports core and is a Tier-2 module by the membership
# invariant (`ops/type_gate.py`). It is therefore promoted into `files` above and DROPPED from the
# silent-follow list here (its errors report like any Tier-2 module's). `edge` stays Tier-3 (zero
# core imports): `follow_imports = "silent"` keeps its types available to the Tier-2 callers that
# reach it transitively (`scheduler.interface`/`scripts.monitor`) while suppressing error-reporting
# FOR edge itself — the recorded-default-not-debt posture, honest not accidentally stricter.
[[tool.mypy.overrides]]
module = ["edge.*"]
follow_imports = "silent"
